# HauntedGameboard

./: .gitignore  README.md  build.gradle.kts  create_so.sh  settings.gradle.kts
nativelib/: opencv_java460-macos-x64.dylib
src/camera/c/: Makefile  com_github_ajsnarr98_hauntedgameboard_hardware_camera_RealLibCamera_Companion.cpp  com_github_ajsnarr98_hauntedgameboard_hardware_camera_RealLibCamera_Companion.h
src/gpio/c/: Makefile  com_ajsnarr_hardware_GPIO.c  com_ajsnarr_hardware_GPIO.h  com_ajsnarr_hauntedgameboard_hardware_GPIO.c  com_ajsnarr_hauntedgameboard_hardware_GPIO.h  com_github_ajsnarr98_hauntedgameboard_hardware_GPIO.c  com_github_ajsnarr98_hauntedgameboard_hardware_GPIO.h  com_github_ajsnarr98_hauntedgameboard_hardware_gpiointerface_RealGPIO.c  com_github_ajsnarr98_hauntedgameboard_hardware_gpiointerface_RealGPIO.h
src/libcamera/c/: CMakeLists.txt  Makefile  clean.sh  com_github_ajsnarr98_hauntedgameboard_hardware_camera_RealLibCamera.cpp  com_github_ajsnarr98_hauntedgameboard_hardware_camera_RealLibCamera.h  com_github_ajsnarr98_hauntedgameboard_hardware_camera_RealLibCamera.hpp
src/main/kotlin/com/ajsnarr/hardware/: Constants.kt  GPIO.java  GPIO.kt  GPIOStepperMotor.kt  GPIOUser.kt  NEMA17Stepper().kt  NEMA17Stepper.kt  StepperMotor.kt
src/main/kotlin/com/ajsnarr/hardware/StepperMotor/: GPIOStepperMotor.kt  NEMA17Stepper.kt  StepperMotor.kt
src/main/kotlin/com/ajsnarr/hauntedgameboard/: Main.kt
src/main/kotlin/com/ajsnarr/main/: Main.kt
src/main/kotlin/com/ajsnarr/util/: Cleanable.kt  Logging.kt  Util.kt
(+105 files in other folders)
